# aiops

experiments/: pyproject.toml
experiments/benchmarks/external_agents/: README.md  __init__.py  build_mabc_artifacts.py  compare_results.py  convert_to_mabc.py  convert_to_rcl.py  export_dataset.py  run_all.py  run_mabc.py  run_rcl.py  run_sre_agent.py
experiments/benchmarks/notebooks/: analyze_incident.ipynb  run_mabc.ipynb  run_rcl.ipynb  run_react.ipynb
experiments/benchmarks/notebooks/cache_dir/: cache.json
experiments/benchmarks/notebooks/trace_output/: traces_1772803603.csv  traces_1773134742.csv  traces_1773135409.csv  traces_1773136595.csv  traces_1773137274.csv  traces_1773145064.csv  traces_1773145096.csv  traces_1773213969.csv  traces_1773214042.csv  traces_1773214054.csv  traces_1773214108.csv  traces_1773214173.csv  traces_1773218865.csv  traces_1773218957.csv  traces_1773219284.csv  traces_1773221004.csv  traces_1773221300.csv  traces_1773224160.csv  traces_1773224277.csv  traces_1773224296.csv  traces_1773224371.csv  traces_1773225884.csv  traces_1773753195.csv  traces_1773755807.csv  traces_1773756237.csv  traces_1773819403.csv  traces_1773819624.csv  traces_1773819822.csv  traces_1773820074.csv  traces_1773822135.csv  traces_1773822963.csv  traces_1773823282.csv  traces_1773823988.csv  traces_1773825012.csv  traces_1773825951.csv  traces_1773826416.csv  traces_1773826823.csv  traces_1773828529.csv  traces_1773828887.csv  traces_1773829204.csv  (+7 more)
experiments/benchmarks/notebooks/wandb/: latest-run
experiments/benchmarks/src/: pyproject.toml
(+1548 files in other folders)
