[tool.poetry]
name = "sre-experiments"
version = "0.1.0"
description = "SRE experiments and benchmarks"
authors = ["Gleb"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jupyter = "^1.0"
ipykernel = "^7.0"
aiopslab = { path = "benchmarks/AIOpsLab", develop = true }
benchmarks-src = { path = "benchmarks/src", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"